--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,13 +23,29 @@ services:
     depends_on:
       - zookeeper
     restart: on-failure
-  
+
+  invdatabase:
+    image: "postgres"
+    command: ["-p", "5432","-c", "track_commit_timestamp=on"]
+    hostname: invdatabase
+    expose:
+      - "5432"
+    ports:
+      - "5432:5432"
+    environment:
+      - "POSTGRES_PASSWORD=tonyisawesome"
+      - "POSTGRES_DB=inventory-db"
+      - "PGPORT=5432"
+
   zookie-consumer:
     build:
       dockerfile: Dockerfile
     deploy:
       mode: replicated
       replicas: 3
+    restart: on-failure
     depends_on:
       - zookeeper
       - kafka
+      - invdatabase
+
